add Job entity, repository, service, and controller for job management functionality